<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".authentication.LoginFragment">

    <TextView
        android:id="@+id/username_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/username_prompt"
        android:textAlignment="center"
        android:textColor="@color/view_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/password_prompt"
        app:layout_constraintEnd_toStartOf="@id/username_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:autofillHints="username"
        android:background="@color/view_color"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:maxWidth="40dp"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="@color/background_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/username_prompt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/username_prompt"
        app:layout_constraintTop_toTopOf="@id/username_prompt"
        tools:ignore="VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/password_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/password_prompt"
        android:textAlignment="center"
        android:textColor="@color/view_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/login_button"
        app:layout_constraintEnd_toStartOf="@id/password_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_prompt" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:autofillHints="password"
        android:background="@color/view_color"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="@color/background_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/password_prompt"
        app:layout_constraintTop_toBottomOf="@id/username_edit_text"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/view_color"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/background_color"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_prompt" />

</androidx.constraintlayout.widget.ConstraintLayout>